--- a/pages/post/post.wxml
+++ b/pages/post/post.wxml
@@ -1,24 +1,30 @@
 <view class="page">
     <!-- 侧边栏内容 -->
-    <view class="page-slidebar">
+      <view class="page-slidebar">
         <view class="page-content">
             <view class="wc">
-            <view class='avatar'>
-   <open-data  type="userAvatarUrl"></open-data>
-   
-   </view>
-   <view class='infotext'>
-   <open-data type="userNickName"></open-data>
-    </view>
-    </view>
-    <view class="wc" bindtap="onTap">
-                <text>个人信息</text>
+            <!-- 未登入样式 -->
+            <view class="avatar">
+            
+            </view>
+
+
+            <!-- 登入后的样式 -->
+              <view class='avatar'>
+                  <open-data  type="userAvatarUrl"></open-data>
+              </view>
+              <view class='infotext'>              
+                  <open-data type="userNickName"></open-data>
+              </view>
+            </view>
+            <view class="wc" bindtap="onTap">
+                  <text>个人信息</text>
             </view>
             <view class="wc">
-                <text>回收站</text>
+                  <text>回收站</text>
             </view>
         </view>
-    </view>
+       </view>
     <view bindtouchmove="tap_drag" bindtouchend="tap_end" bindtouchstart="tap_start" class="page-top {{open ? ['c-state','cover'] : ''}} ">
         
         <view class='content'> 
