--- a/pages/post/post.wxml
+++ b/pages/post/post.wxml
@@ -2,14 +2,14 @@
     <!-- 侧边栏内容 -->
       <view class="page-slidebar">
         <view class="page-content">
-            <view class="wc">
+            <view class="wchead">
             <!-- 未登入样式 -->
             <!-- 登入后的样式 -->
               <view class='avatar'>
-                <open-data  type="userAvatarUrl"></open-data>
+                <!-- <open-data  type="userAvatarUrl"></open-data> -->
               </view>
               <view class='infotext'>              
-                  <open-data type="userNickName"></open-data>
+                  <!-- <open-data type="userNickName"></open-data> -->
               </view>
             </view>
             <view class="wc" bindtap="onTap">
@@ -26,24 +26,32 @@
             </view>
           </view>
       </view>
-  <view bindtouchmove="tap_drag" bindtouchend="tap_end" bindtouchstart="tap_start" class="page-top {{open ? ['c-state','cover'] : ''}} ">
-      <view class='content'>  
-           <view class='card' wx:for="{{weeklyMovieList}}"bindtap='onTap2' data-text-id='{{item.id}}'>
+  <view class="page-top {{open ? ['c-state','cover'] : ''}}">
+  
+      <view class='content'> 
+           <view class='card' wx:for="{{weeklyMovieList}}"bindtap="onTap2" data-text-id='{{item.id}}'>
               <i-swipeout  i-class="i-swipeout-demo-item" operateWidth="{{100}}">
                   <view slot="content">
-                        <i-card title="{{item.name}}" extra="{{item.id}}" >
-                           <view slot="content">{{item.comment}}</view>
-                           <view slot="footer">{{item.date}}</view>
+                        <i-card title="{{item.card_name}}" extra="{{item.peview_time}}" >
+                           <view slot="content">{{item.card_comment}}</view>
+                           <view slot="footer">{{item.current_date}}</view>
                         </i-card>
                   </view>
                     <view  bindtap="deleteTap"  slot="button" class="i-swipeout-demo-button">
-                        <i-icon type="delete" size="50" color="red" />             
+                        <i-icon type="delete" size="80" color="red" />             
                     </view>
               </i-swipeout>
          </view>
+     
       </view>
           <view class='tianjia' bindtap="onTap1">
-              <i-icon type="add" size="40" color="blue" />
-          </view>   
+              <i-icon type="add" size="80" color="blue" />
+          </view> 
+      <view class="dingbu">
+            <view bindtap="tap_ch" class="homeicon">
+             <open-data  type="userAvatarUrl"></open-data>
+            </view> 
+          <input type="text" class="shousuo" placeholder="输入关键字查询">            </input>
+      </view> 
   </view>
 </view>
